crates/ruff_python_parser/tests/snapshots/invalid_syntax@backslash_continuation_indentation_error.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/backslash_continuation_indentation_error.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..29,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 0..28,
                    pattern: None,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 3..7,
                            value: true,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 13..14,
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 13..14,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 27..28,
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 27..28,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 |   if True:
2 |       1
3 | /       \
4 | |     2
  | |____^ Syntax Error: Unexpected indentation
